fix: fix panel putton out of bound once change page
- this happen due to `display grid` overlap with field `display flex`

--- a/frontend/src/styles/features/promotionpanel.module.scss
+++ b/frontend/src/styles/features/promotionpanel.module.scss
@@ -24,7 +24,7 @@
 }
 
 .carouselContainer {
-    display: grid;
+    display: grid !important;
 }
 
 
